module-info added